2015-12-20  Alexei Podtelezhnikov  <apodtele@gmail.com>

	Relocate gamma grid display from [ftview] to [ftgamma].

	* src/ftview.c (Procenn_Event): Remove event `G'.
	(event_help): Update.
	(event_gamma_grid): Move to...
	* src/ftgamma.c (event_gamma_grid): ... here.
	(Process_Event): New function.
	(event_help): New function.
	(main): Update to handle events.

2015-12-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring, ftview] Auxiliary gamma rounding fixes.

	* src/ftstring.c (event_gamma_change): Updated.
	* src/ftview.c (event_gamma_grid): Updated.

2015-12-18  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* graph/gblender.c (gblender_set_gamma_table): Rounding, formatting.

2015-12-15  Werner Lemberg  <wl@gnu.org>

	* src/ftgamma.c (do_fill): Fix compiler warning.

2015-12-14  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftgamma] Modernize appearance.

	* src/ftgamma.c: Major renovations.
	* src/ftgamma.1: Update.

2015-12-10  Werner Lemberg  <wl@gnu.org>

	* src/ftcommon.c (FTDemo_Install_Font): Handle alloc/file errors.

	Problem reported by Alexei.

2015-12-09  Alexei Podtelezhnikov  <apodtele@gmail.com>

	* src/ftstring.c (event_angle_change): Wrap angle differently.

2015-12-07  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[ftstring] Miscellaneous updates.

	* src/ftstring.c (event_gamma_change): Do not report gamma updates.
	(write_header): Permanently display gamma.
	(gamma_ramp_draw): Brighten the curve.

2015-12-06  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Small improvements.

	* graph/gblender.h (GBLENDER_SHADE_INDEX): Round to nearest grid.
	* graph/gblender.c (gblender_lookup, gblender_lookup_channel): Minor.

2015-12-05  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Unravel blending, part 2.

	* graph/gblender.c (gblender_reset_key, gblender_reset_channel_key):
	Set alpha grid values explicitly.

2015-12-03  Alexei Podtelezhnikov  <apodtele@gmail.com>

	[graph] Unravel blending.
